--- a/package.json
+++ b/package.json
@@ -11,5 +11,13 @@
   "engines": {
     "node": ">=18"
   },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/OmerNachmani/play-qqpr.git"
+  },
+  "homepage": "https://github.com/OmerNachmani/play-qqpr#readme",
+  "bugs": {
+    "url": "https://github.com/OmerNachmani/play-qqpr/issues"
+  },
   "files": ["bin", "README.md", "LICENSE"]
 }
